apps/base/mealie/deployment-mealie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      # Init-Container wartet, bis Postgres erreichbar ist
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v2.8.0
        ports:
        - containerPort: 9000
        resources:
          limits:
            memory: "1000M"
        volumeMounts:
        - name: mealie-data
          mountPath: /app/data/
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data
