apps/base/mealie/service-mealie.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: maelie
spec:
  selector:
    app: mealie
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  # Für den externen Zugriff kannst du hier den Servicetyp ändern (z.B. NodePort oder LoadBalancer)
  type: ClusterIP
