apps/base/mealie/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mealie
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
